grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $._declaration,
        $.attribute,
        $.conditional_block,
      ),

    function_declaration: ($) =>
      seq(
        optional($.inline_specifier),
        'function',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        ':',
        field('return_type', $._type),
        field('body', $.block),
      ),

    parameters: ($) =>
      seq('(', commaSep(choice($.self_parameter, $.parameter)), ')'),

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.let_else_statement,
        $.const_declaration,
        $.expression_statement,
        $.return_statement,
        $.defer_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.for_of_statement,
        $.asm_statement,
        $.block,
        $.conditional_block,
        $.attribute,
      ),

    variable_declaration: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    let_else_statement: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('pattern', $._pattern),
        '=',
        field('value', $._expression),
        'else',
        field('alternative', $.block),
        ';',
      ),

    expression_statement: ($) => seq($._expression, ';'),

    return_statement: ($) => seq('return', optional($._expression), ';'),

    _expression: ($) =>
      choice(
        $.identifier,
        $.scoped_identifier,
        $.self_expression,
        $._literal,
        $.record_init,
        $.unit_expression,
        $.tuple_expression,
        $.group_expression,
        $.unary_expression,
        $.reference_expression,
        $.dereference_expression,
        $.postfix_expression,
        $.binary_expression,
        $.assignment_expression,
        $.ternary_expression,
        $.cast_expression,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.match_expression,
        $.lambda_expression,
        $.builtin_expression,
        $.capture_expression,
        $.asm_expression,
      ),

    member_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          '.',
          field('property', $.identifier),
        ),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          '[',
          field('index', $._expression),
          ']',
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('function', $._expression),
          optional(field('type_arguments', $.type_arguments)),
          field('arguments', $.arguments),
        ),
      ),

    arguments: ($) => seq('(', commaSep($._expression), ')'),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field('left', $._expression),
          field('operator', choice(...ASSIGNMENT_OPERATORS)),
          field('right', $._expression),
        ),
      ),

    _pattern: ($) =>
      choice(
        $._simple_pattern,
        $.or_pattern,
      ),

    path_pattern: ($) =>
      prec.right(
        seq(
          field('name', $._path),
          optional(seq('(', commaSep($._pattern), ')')),
        ),
      ),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.identifier,
        $.scoped_identifier,
        $.generic_type,
        $.function_type,
        $.reference_type,
        $.pointer_type,
        $.mutable_type,
        $.array_type,
      ),

    primitive_type: (_) => choice(...PRIMITIVE_TYPES),

    integer_literal: (_) => token(/[0-9]+(_[0-9]+)*/),

    mutable_specifier: (_) => 'mut',

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    _path: ($) => choice($.identifier, $.scoped_identifier),
